cmake_minimum_required(VERSION 3.0)

project(advcpp)

SET(CMAKE_CXX_STANDARD 20)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

# added for MacOS Sonoma + GCC 13.2 installation's linker problems
# selects classic linker to be used, not the new linker
SET(CMAKE_CXX_FLAGS "-Wl,-ld_classic")

add_executable(w1a1 "week1-check-lms-for-introduction-ppt.cpp")
add_executable(w2a1 "week2-app1.cpp")
add_executable(w2a2 "week2-app2.cpp")
add_executable(w3a1 "week3-app1.cpp")
add_executable(w3a2 "week3-app2.cpp")
add_executable(w4a1 "week4-app1.cpp")
add_executable(w4a2 "week4-app2.cpp")
add_executable(w4a3 "week4-app3.cpp")
add_executable(w5a1 "week5-app1.cpp")
add_executable(w5a2 "week5-app2.cpp")
add_executable(w6a1 "week6-app1.cpp")
add_executable(w6a2 "week6-app2.cpp")
add_executable(w7a1 "week7-app1.cpp")
add_executable(w7a2 "week7-app2.cpp")
add_executable(w7a3 "week7-app3.cpp")
add_executable(w8a1 "week8-app1.cpp")
add_executable(w8a2 "week8-app2.cpp")
add_executable(w8a3 "week8-app3.cpp")
add_executable(w9a1 "week9-app1.cpp")
add_executable(w9a2 "week9-app2.cpp")
add_executable(w9a3 "week9-app3.cpp")
add_executable(mt1_prep "mt1_preparation.cpp")
add_executable(mt1_19 "mt1_19semicolon.cpp")
add_executable(mt1_22 "mt1_22semicolon.cpp")
add_executable(mt1_28 "mt1_28semicolon.cpp")
# week 10 Ramadan Holiday
# week 11 mt1
add_executable(w12a1 "week12-app1.cpp")
add_executable(w12a2 "week12-app2.cpp")
add_executable(w13a1 "week13-app1.cpp")
add_executable(w13a2 "week13-app2.cpp")
add_executable(w13a3 "week13-app3.cpp")
add_executable(w13a4 "week13-app4.cpp")
add_executable(w14a1 "week14-app1.cpp")
add_executable(w14a2 "week14-app2.cpp")
add_executable(w14a3 "week14-app3.cpp")
add_executable(w14a4 "week14-app4.cpp")
add_executable(w14a5 "week14-app5.cpp")
add_executable(w14a6 "week14-app6.cpp")
add_executable(w14a7 "week14-app7.cpp")
